--- a/app/frontend/public/index.html
+++ b/app/frontend/public/index.html
@@ -7,8 +7,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-	-->
-	<meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no" />
+  -->
+	<meta name="viewport" content="width=device-width, initial-scale = 1.0, minimum-scale=1, maximum-scale=1.0, user-scalable=no" />
     <meta name="Description" content="TODO" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <link
